--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
 html {
   font-size: 62.5%;
+}
+
+body {
   font-family: "Inter", sans-serif;
 }
 
@@ -13,5 +16,5 @@ html {
   width: 850px;
   height: 550px;
   padding: 4rem;
-  box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.3);
+  box-shadow: 5px 5px 15px 5px rgba(0, 0, 0, 0.3);
 }
